--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
 
 <!-- La syntaxe valable est  <balise *ngFor="let element of array" [property]="element" >. -->
 <!-- *ngFor et *ngIf sont des directives structurelles -->
-<app-header></app-header>
+<!-- <app-header></app-header>
+<router-outlet></router-outlet> -->
 
-<app-face-snap-list></app-face-snap-list>
+<h1>{{interval$ | async}}</h1>
