work on reactive forms avec http request with Observables

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,12 +1,12 @@
 <div class="landing-block">
-  <form #emailForm="ngForm" (ngSubmit)="onSubmitForm(emailForm)">
+  <!-- <form #emailForm="ngForm" (ngSubmit)="onSubmitForm(emailForm)">
     <label for="emailInput">Inscrivez-vous pour à notre
       newsletter</label>
     <input id="emailInput" name="userEmail" type="email" [(ngModel)]="userEmail">
     <label for="IdInput">votre âge</label>
     <input id="IdInput" name="userId" type="number" [(ngModel)]="userId">
     <button type="submit">OK!</button>
-  </form>
+  </form> -->
   <img src="assets/snapface_logo.png" alt="Snapface logo">
 
   <div class="landing-links">
